# Colab

./: .editorconfig  .env.example  .gitignore  .pre-commit-config.yaml  .prettierignore  .tflint.hcl  Makefile  README.md  docker-compose.yml  package.json  pnpm-lock.yaml  pyproject.toml  render.yaml  tsconfig.base.json  turbo.json
services/admin-svc/: Dockerfile  pyproject.toml
services/admin-svc/alembic/: env.py
services/admin-svc/alembic/versions/: 20260511_001_admin_schema.py
services/admin-svc/app/: audit.py  config.py  db.py  main.py  middleware.py  models.py  rbac.py
services/admin-svc/app/routers/: audit.py  billing.py  flags.py  kpi.py  moderation.py  support.py  users.py
services/admin-svc/infra/casbin/: policy.csv
services/admin-svc/tests/: test_audit_append_only.py  test_rbac.py
services/ai-orchestrator-svc/: Dockerfile  pyproject.toml
services/ai-orchestrator-svc/alembic/: env.py
services/ai-orchestrator-svc/alembic/versions/: 20260511_0001_initial_ai_schema.py
services/ai-orchestrator-svc/app/: config.py  db.py  main.py  models.py
services/ai-orchestrator-svc/app/routers/: commands.py  consent.py  webhooks.py
services/ai-orchestrator-svc/app/schemas/: commands.py  consent.py
services/ai-orchestrator-svc/app/services/: billing_client.py  moderation_client.py  openai_client.py  replicate_client.py  s3_client.py
services/ai-orchestrator-svc/app/watermark/: audio.py  image.py
services/ai-orchestrator-svc/app/workers/: celery_app.py  expire_tasks.py  generation_tasks.py
services/ai-orchestrator-svc/tests/: conftest.py  test_consent_state_machine.py  test_credit_reserve.py  test_watermarking.py  test_webhook_idempotency.py
services/auth-svc/: .env.docker  Dockerfile  fly.toml  pyproject.toml
services/auth-svc/alembic/: alembic.ini  env.py
services/auth-svc/alembic/versions/: 0001_initial_auth_schema.py
services/auth-svc/app/: __init__.py  main.py
services/auth-svc/app/models/: __init__.py  user.py
services/auth-svc/app/routers/: __init__.py  account.py  email_verify.py  login.py  password_reset.py  sessions.py  signup.py  token.py
services/auth-svc/app/schemas/: __init__.py  auth.py
services/auth-svc/app/services/: __init__.py  brute_force.py  email_sender.py  oauth.py  otp.py  password.py  tokens.py
services/auth-svc/tests/: __init__.py  conftest.py  test_login.py  test_oauth.py  test_signup.py  test_token.py
services/billing-svc/: Dockerfile  pyproject.toml
services/billing-svc/alembic/: env.py
services/billing-svc/alembic/versions/: 0001_initial_billing_schema.py
services/billing-svc/app/: main.py
services/billing-svc/app/models/: billing.py
services/billing-svc/app/routers/: admin.py  billing.py  internal.py  webhooks.py
services/billing-svc/app/schemas/: billing.py
services/billing-svc/app/services/: credits.py  dunning.py  entitlements.py  refunds.py  subscriptions.py  webhooks.py
services/billing-svc/app/workers/: rc_handlers.py  stripe_handlers.py
services/billing-svc/tests/: conftest.py  test_credits.py  test_dunning.py  test_entitlements.py  test_refunds.py  test_webhooks.py
services/chat-svc/: .env.docker  Dockerfile  pyproject.toml
services/chat-svc/alembic/: env.py
services/chat-svc/alembic/versions/: 20260511_0001_initial_chat_schema.py
services/chat-svc/app/: config.py  db.py  main.py  models.py  schemas.py  uuidv7.py
services/chat-svc/app/routers/: rooms.py
services/chat-svc/app/workers/: event_consumers.py
services/chat-svc/app/ws/: connection_manager.py  handler.py  presence.py
services/chat-svc/tests/: conftest.py  test_connection_expiry.py  test_cross_pod_fanout.py  test_rest_endpoints.py  test_ws_protocol.py
services/chat-svc/tests/load/: k6_ws_latency.js
services/gateway-svc/: .env.docker  Dockerfile  Dockerfile.fly  alembic.ini  fly.toml  pyproject.toml
services/gateway-svc/app/: config.py  main.py  middleware.py  proxy.py  routes.py
services/gateway-svc/app/routers/: health.py
services/gateway-svc/migrations/: env.py
services/gateway-svc/tests/: test_health.py
services/geo-svc/: Dockerfile  pyproject.toml
services/geo-svc/app/: config.py  main.py
services/geo-svc/app/routers/: geo.py
services/geo-svc/tests/: test_geo.py
services/identity-svc/: Dockerfile  pyproject.toml
services/identity-svc/alembic/: env.py
services/identity-svc/app/: __init__.py  main.py
services/identity-svc/tests/: __init__.py  conftest.py  test_webhook.py
services/invite-svc/: Dockerfile  pyproject.toml
services/invite-svc/alembic/: alembic.ini  env.py
services/invite-svc/app/: config.py  db.py  main.py
services/invite-svc/tests/: conftest.py
services/media-svc/: Dockerfile  pyproject.toml
services/media-svc/alembic/: env.py
services/media-svc/app/: config.py  db.py  main.py  schemas.py  uuidv7.py
services/media-svc/tests/: test_media_flow.py
services/meeting-svc/: Dockerfile  pyproject.toml
services/meeting-svc/alembic/: env.py
services/meeting-svc/app/: config.py  db.py  main.py  models.py  schemas.py
services/meeting-svc/tests/: conftest.py  test_bot_consent.py  test_google_calendar.py  test_transcript_ingestion.py  test_webhook_security.py
services/moderation-svc/: Dockerfile  pyproject.toml
services/moderation-svc/alembic/: env.py
services/moderation-svc/app/: config.py  db.py  main.py  models.py  schemas.py  score.py
services/moderation-svc/tests/: test_action_propagation.py  test_adversarial.py  test_dmca_workflow.py  test_report_api.py  test_score_algorithm.py
services/notification-svc/: Dockerfile  pyproject.toml
services/notification-svc/alembic/: alembic.ini  env.py
services/notification-svc/app/: dispatch.py  main.py  models.py  preferences.py  schemas.py
services/notification-svc/tests/: conftest.py  test_debounce.py  test_email_fallback.py  test_preferences.py  test_push_device.py  test_transactional_override.py  test_unsubscribe.py
services/profile-svc/: .env.docker  Dockerfile  fly.toml  pyproject.toml
services/profile-svc/alembic/: alembic.ini  env.py
services/profile-svc/app/: config.py  db.py  main.py
(+699 files in other folders)
