[project]
name = "colab-workspace"
version = "0.0.1"
requires-python = ">=3.12"

[tool.uv.workspace]
members = [
    "services/gateway-svc",
    "services/hello-svc",
    "packages/colab_common",
]

[tool.uv.sources]
colab-common = { workspace = true }

[tool.ruff]
line-length = 100
target-version = "py312"
exclude = [
    ".git",
    "__pycache__",
    ".venv",
    "node_modules",
    "build",
    "dist",
]

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings
    "F",    # pyflakes
    "I",    # isort
    "B",    # flake8-bugbear
    "C4",   # flake8-comprehensions
    "UP",   # pyupgrade
    "N",    # pep8-naming
    "S",    # flake8-bandit
    "A",    # flake8-builtins
]
ignore = [
    "S101",  # assert in tests is fine
    "S105",  # hardcoded passwords in tests
    "S311",  # random not for crypto — known
]

[tool.ruff.lint.isort]
known-first-party = ["colab_common"]

[tool.mypy]
python_version = "3.12"
strict = true
ignore_missing_imports = true
exclude = [
    "tests/",
    ".venv/",
    "node_modules/",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["packages/colab_common/tests", "services"]
addopts = "--tb=short -q"

[tool.coverage.run]
source = ["packages/colab_common/src"]
branch = true

[tool.coverage.report]
fail_under = 80
show_missing = true
