[project]
name = "admin-svc"
version = "0.1.0"
description = "Colab admin-svc — moderator console, support console, billing admin, audit log, RBAC"
requires-python = ">=3.12"
dependencies = [
    "colab-common",
    "fastapi>=0.115,<1",
    "uvicorn[standard]>=0.32,<1",
    "sqlalchemy[asyncio]>=2.0.36,<3",
    "asyncpg>=0.30,<1",
    "alembic>=1.13,<2",
    "casbin>=1.36,<2",
    "casbin-sqlalchemy-adapter>=1.4,<2",
    "httpx>=0.27,<1",
    "pydantic>=2.9,<3",
    "pydantic-settings>=2.6,<3",
    "structlog>=24.1,<25",
    "python-multipart>=0.0.12,<1",
    "pyotp>=2.9,<3",
    "qrcode>=7.4,<8",
    "passlib[bcrypt]>=1.7,<2",
    "redis[hiredis]>=5.2,<8",
    "aio-pika>=9.4,<10",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
dev-dependencies = [
    "pytest>=8.3,<9",
    "pytest-asyncio>=0.24,<1",
    "pytest-mock>=3.14,<4",
    "httpx>=0.27,<1",
    "freezegun>=1.5,<2",
    "factory-boy>=3.3,<4",
    "colab-common[testing]",
]

[tool.uv.sources]
colab-common = { workspace = true }

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.hatch.build.targets.wheel]
packages = ["app"]
