[project]
name = "ai-orchestrator-svc"
version = "0.1.0"
description = "Colab ai-orchestrator-svc — 5 in-chat AI commands, AI Collab Preview mockups, Replicate webhook orchestration, credit-wallet metering"
requires-python = ">=3.12"
dependencies = [
    "colab-common",
    "fastapi>=0.115,<1",
    "uvicorn[standard]>=0.32,<1",
    "sqlalchemy[asyncio]>=2.0.36,<3",
    "asyncpg>=0.30,<1",
    "alembic>=1.13,<2",
    "redis[hiredis]>=5.2,<6",
    "aio-pika>=9.4,<10",
    "httpx>=0.27,<1",
    "pydantic>=2.9,<3",
    "pydantic-settings>=2.6,<3",
    "structlog>=24.1,<25",
    "python-multipart>=0.0.12,<1",
    "anyio>=4.6,<5",
    "uvloop>=0.21,<1",
    "openai>=1.40,<3",
    "celery[redis]>=5.4,<6",
    "boto3>=1.35,<2",
    "Pillow>=11.0,<12",
    "pydub>=0.25,<1",
    "mutagen>=1.47,<2",
    "numpy>=1.26,<3",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
dev-dependencies = [
    "pytest>=8.3,<9",
    "pytest-asyncio>=0.24,<1",
    "pytest-mock>=3.14,<4",
    "httpx>=0.27,<1",
    "freezegun>=1.5,<2",
    "factory-boy>=3.3,<4",
    "colab-common[testing]",
    "moto[s3]>=5.0,<6",
]

[tool.uv.sources]
colab-common = { workspace = true }

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.hatch.build.targets.wheel]
packages = ["app"]
