[project]
name = "auth-svc"
version = "0.1.0"
description = "Colab auth-svc — signup, login, JWT, session management, OAuth"
requires-python = ">=3.12"
dependencies = [
    "colab-common",
    "fastapi>=0.115,<1",
    "uvicorn[standard]>=0.32,<1",
    "argon2-cffi==25.1.0",
    "pyjwt[crypto]>=2.9,<3",
    "cryptography>=43,<49",
    "google-auth>=2.35,<3",
    "boto3>=1.34,<2",
    "httpx>=0.27,<1",
    "email-validator>=2.2,<3",
    "zxcvbn>=4.4,<5",
    "alembic>=1.13,<2",
    "asyncpg>=0.29,<1",
    "sqlalchemy>=2.0,<3",
    "redis[hiredis]>=5.0,<8",
    "pydantic>=2.7,<3",
    "pydantic-settings>=2.3,<3",
    "aio-pika>=9.4,<10",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
dev-dependencies = [
    "pytest>=8.3,<9",
    "pytest-asyncio>=0.24,<1",
    "httpx>=0.27,<1",
    "colab-common[testing]",
    "freezegun>=1.5,<2",
    "respx>=0.21,<1",
]

[tool.uv.sources]
colab-common = { workspace = true }

[tool.hatch.build.targets.wheel]
packages = ["app"]
