[project]
name = "gateway-svc"
version = "0.1.0"
description = "Colab API Gateway — request routing, auth pre-check, rate-limit, CORS"
requires-python = ">=3.12"
dependencies = [
    "colab-common",
    "fastapi>=0.115,<1",
    "uvicorn[standard]>=0.32,<1",
    "httpx>=0.27,<1",
    "python-multipart>=0.0.12",
    # DB + migrations (for waitlist_emails table — spec 017 marketing-web integration)
    "alembic>=1.13,<2",
    "sqlalchemy>=2.0,<3",
    "asyncpg>=0.29,<1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
dev-dependencies = [
    "pytest>=8.3,<9",
    "pytest-asyncio>=0.24,<1",
    "httpx>=0.27,<1",
    "colab-common[testing]",
]

[tool.uv.sources]
colab-common = { workspace = true }

[tool.hatch.build.targets.wheel]
packages = ["app"]
