[project]
name = "geo-svc"
version = "0.1.0"
description = "Colab geo-svc — Mapbox proxy, reverse geocode, PostGIS radius helper, locale unit conversion"
requires-python = ">=3.12"
dependencies = [
    "colab-common",
    "fastapi>=0.115,<1",
    "uvicorn[standard]>=0.32,<1",
    "redis[hiredis]>=5.0,<9",
    "pydantic>=2.7,<3",
    "pydantic-settings>=2.3,<3",
    "httpx>=0.27,<1",
    "prometheus-client>=0.20,<1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
dev-dependencies = [
    "pytest>=8.3,<9",
    "pytest-asyncio>=0.24,<1",
    "httpx>=0.27,<1",
    "colab-common[testing]",
    "respx>=0.21,<1",
    "pytest-cov>=6.0,<7",
    "fakeredis[aioredis]>=2.0,<3",
]

[tool.uv.sources]
colab-common = { workspace = true }

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.hatch.build.targets.wheel]
packages = ["app"]
