[project]
name = "identity-svc"
version = "0.1.0"
description = "Colab identity-svc — Persona inquiry + webhook + IdentityVerification state"
requires-python = ">=3.12"
dependencies = [
    "colab-common",
    "fastapi>=0.115,<1",
    "uvicorn[standard]>=0.32,<1",
    "httpx>=0.27,<1",
    "alembic>=1.13,<2",
    "asyncpg>=0.29,<1",
    "sqlalchemy>=2.0,<3",
    "redis[hiredis]>=5.0,<6",
    "pydantic>=2.7,<3",
    "pydantic-settings>=2.3,<3",
    "aio-pika>=9.4,<10",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
dev-dependencies = [
    "pytest>=8.3,<9",
    "pytest-asyncio>=0.24,<1",
    "httpx>=0.27,<1",
    "colab-common[testing]",
    "respx>=0.21,<1",
]

[tool.uv.sources]
colab-common = { workspace = true }
