[project]
name = "invite-svc"
version = "0.1.0"
description = "Colab invite-svc — Vibe Check invites, quota, blocks, match emission"
requires-python = ">=3.12"
dependencies = [
    "colab-common",
    "fastapi>=0.115,<1",
    "uvicorn[standard]>=0.32,<1",
    "alembic>=1.14,<2",
    "asyncpg>=0.30,<1",
    "sqlalchemy>=2.0,<3",
    "redis[hiredis]>=5.0,<6",
    "pydantic>=2.7,<3",
    "pydantic-settings>=2.3,<3",
    "aio-pika>=9.4,<10",
    "httpx>=0.27,<1",
    "celery[rabbitmq]>=5.4,<6",
    "posthog>=3.5,<4",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
dev-dependencies = [
    "pytest>=8.3,<9",
    "pytest-asyncio>=0.24,<1",
    "httpx>=0.27,<1",
    "colab-common[testing]",
    "freezegun>=1.5,<2",
    "respx>=0.21,<1",
    "pytest-cov>=5.0,<6",
    "fakeredis>=2.25,<3",
]

[tool.uv.sources]
colab-common = { workspace = true }

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
