[project]
name = "moderation-svc"
version = "0.1.0"
description = "Colab moderation-svc — risk-tiered moderation pipeline, DMCA workflow, action propagation"
requires-python = ">=3.12"
dependencies = [
    "colab-common",
    "fastapi>=0.115,<1",
    "uvicorn[standard]>=0.32,<1",
    "sqlalchemy[asyncio]>=2.0.36,<3",
    "asyncpg>=0.30,<1",
    "alembic>=1.13,<2",
    "openai>=1.50,<2",
    "boto3>=1.35,<2",
    "botocore>=1.35,<2",
    "imagehash>=4.3,<5",
    "Pillow>=11.0,<12",
    "pyacoustid>=1.3,<2",
    "pgvector>=0.3,<1",
    "aio-pika>=9.4,<10",
    "redis[hiredis]>=5.2,<8",
    "celery[redis]>=5.4,<6",
    "celery-redbeat>=2.2,<3",
    "httpx>=0.27,<1",
    "pydantic>=2.9,<3",
    "pydantic-settings>=2.6,<3",
    "structlog>=24.1,<25",
    "python-multipart>=0.0.12,<1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
dev-dependencies = [
    "pytest>=8.3,<9",
    "pytest-asyncio>=0.24,<1",
    "pytest-mock>=3.14,<4",
    "httpx>=0.27,<1",
    "freezegun>=1.5,<2",
    "factory-boy>=3.3,<4",
    "colab-common[testing]",
]

[tool.uv.sources]
colab-common = { workspace = true }

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.hatch.build.targets.wheel]
packages = ["app"]
