[project]
name = "notification-svc"
version = "0.1.0"
description = "Colab notification-svc — multi-channel push/email/in-app delivery"
requires-python = ">=3.12"
dependencies = [
    "colab-common",
    "fastapi>=0.115,<1",
    "uvicorn[standard]>=0.32,<1",
    "boto3>=1.35,<2",
    "Jinja2>=3.1,<4",
    "html2text>=2024.2,<2025",
    "PyJWT[crypto]>=2.9,<3",
    "celery[redis]>=5.4,<6",
    "celery-redbeat>=2.2,<3",
    "aio-pika>=9.4,<10",
    "redis[hiredis]>=5.2,<6",
    "sqlalchemy[asyncio]>=2.0.36,<3",
    "alembic>=1.13,<2",
    "asyncpg>=0.30,<1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
dev-dependencies = [
    "pytest>=8.3,<9",
    "pytest-asyncio>=0.24,<1",
    "httpx>=0.27,<1",
    "moto[sns,ses,s3]>=5.0,<6",
    "freezegun>=1.5,<2",
    "fakeredis[aioredis]>=2.26,<3",
    "colab-common[testing]",
]

[tool.uv.sources]
colab-common = { workspace = true }

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.hatch.build.targets.wheel]
packages = ["app"]
