[project]
name = "profile-svc"
version = "0.1.0"
description = "Colab profile-svc — profile CRUD, portfolio, vocations, AI review, badge state machine"
requires-python = ">=3.12"
dependencies = [
    "colab-common",
    "fastapi>=0.115,<1",
    "uvicorn[standard]>=0.32,<1",
    "alembic>=1.14,<2",
    "asyncpg>=0.30,<1",
    "sqlalchemy>=2.0,<3",
    "geoalchemy2>=0.15,<1",
    "pgvector>=0.3,<1",
    "redis[hiredis]>=5.0,<6",
    "pydantic>=2.7,<3",
    "pydantic-settings>=2.3,<3",
    "aio-pika>=9.4,<10",
    "boto3>=1.35,<2",
    "cryptography>=43,<45",
    "httpx>=0.27,<1",
    "celery[rabbitmq]>=5.4,<6",
    "imagehash>=4.3,<5",
    "Pillow>=11.0,<12",
    "pyacoustid>=1.3,<2",
    "posthog>=3.5,<4",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
dev-dependencies = [
    "pytest>=8.3,<9",
    "pytest-asyncio>=0.24,<1",
    "httpx>=0.27,<1",
    "colab-common[testing]",
    "freezegun>=1.5,<2",
    "respx>=0.21,<1",
    "pytest-cov>=6.0,<7",
    "moto[kms,s3]>=5.0,<6",
]

[tool.uv.sources]
colab-common = { workspace = true }
